force-app/main/default/objects/Case/fields/CulturePlot__c.field-meta.xml
<CustomField>
    <fullName>CulturePlot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cultura do Talhão</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2)</booleanFilter>
        <filterItems>
            <field>DelimitedLandCultures__c.DelimitedLand__c</field>
            <operation>equals</operation>
            <valueField>$Source.Plot__c</valueField>
        </filterItems>
        <filterItems>
            <field>DelimitedLandCultures__c.Crop__c</field>
            <operation>equals</operation>
            <valueField>$Source.Crop__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DelimitedLandCultures__c</referenceTo>
    <relationshipLabel>Ocorrências</relationshipLabel>
    <relationshipName>Ocorrencias</relationshipName>
    <type>Lookup</type>
</CustomField>