force-app/main/default/objects/Case/fields/DamagedArea__c.field-meta.xml
<CustomField>
    <fullName>DamagedArea__c</fullName>
    <label>Área afetada</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>