force-app/main/default/objects/Case/fields/IncidentType__c.field-meta.xml
<CustomField>
    <fullName>IncidentType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de ocorrência</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Incident__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>