force-app/main/default/objects/Case/fields/IncidentTypePicklist__c.field-meta.xml
<CustomField>
    <fullName>IncidentTypePicklist__c</fullName>
    <label>Tipo de Ocorrência</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pragas</fullName>
            </value>
            <value>
                <fullName>Doencas</fullName>
                <label>Doenças</label>
            </value>
            <value>
                <fullName>Climaticas</fullName>
                <label>Climáticas</label>
            </value>
            <value>
                <fullName>Fertilizacao</fullName>
                <label>Fertilização</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>