force-app/main/default/objects/Case/fields/MeasureUnit__c.field-meta.xml
<CustomField>
    <fullName>MeasureUnit__c</fullName>
    <formula>TEXT ( Plot__r.UnitMeasurement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidade de Medida do Talhão</label>
    <type>Text</type>
</CustomField>