force-app/main/default/objects/Case/fields/PercentageAffectedArea__c.field-meta.xml
<CustomField>
    <fullName>PercentageAffectedArea__c</fullName>
    <formula>(DamagedArea__c /  Plot__r.AreaTotal__c) * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentagem de área afetada do talhão</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>