force-app/main/default/objects/Case/fields/PercentageAffectedAreaCulture__c.field-meta.xml
<CustomField>
    <fullName>PercentageAffectedAreaCulture__c</fullName>
    <formula>(DamagedArea__c /  CulturePlot__r.AreaCultivated__c ) * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentagem de área afetada da cultura</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>