force-app/main/default/objects/Case/recordTypes/OcorrenceField.recordType-meta.xml
<RecordType>
    <fullName>OcorrenceField</fullName>
    <active>true</active>
    <businessProcess>Ocorrência na Lavoura</businessProcess>
    <label>Ocorrência na Lavoura</label>
</RecordType>