force-app/main/default/objects/Case/validationRules/AreaAfetada.validationRule-meta.xml
<ValidationRule>
    <fullName>AreaAfetada</fullName>
    <active>true</active>
    <description>Área Afetada não pode ser maior que área disponível</description>
    <errorConditionFormula>AND(NOT  ISBLANK( Plot__c ) ,  DamagedArea__c  &gt;  Plot__r.AreaCultivatedLand__c )</errorConditionFormula>
    <errorMessage>Área Afetada não pode ser maior que Área disponível no Talhão!</errorMessage>
</ValidationRule>