force-app/main/default/objects/Case/validationRules/AreaAfetadaCultura.validationRule-meta.xml
<ValidationRule>
    <fullName>AreaAfetadaCultura</fullName>
    <active>true</active>
    <description>Área afetada na ocorrência não pode ser maior que área disponível para cultura selecionada</description>
    <errorConditionFormula>AND(NOT  ISBLANK( CulturePlot__c ) ,  DamagedArea__c  &gt;   CulturePlot__r.AreaCultivated__c  )</errorConditionFormula>
    <errorMessage>Área afetada  não pode ser maior que área disponível para cultura selecionada.</errorMessage>
</ValidationRule>