force-app/main/default/objects/Case/validationRules/AreaAfetadaTalhaoSelecionado.validationRule-meta.xml
<ValidationRule>
    <fullName>AreaAfetadaTalhaoSelecionado</fullName>
    <active>true</active>
    <description>Regra para obrigar o preenchimento de área afetada caso houver talhão na ocorrência</description>
    <errorConditionFormula>AND (NOT ISBLANK( Plot__c ), ISBLANK ( DamagedArea__c ))</errorConditionFormula>
    <errorMessage>Área afetada deve ser preenchida com talhão selecionado na ocorrência.</errorMessage>
</ValidationRule>