force-app/main/default/objects/Case/listViews/TillageIncidents.listView-meta.xml
<ListView>
    <fullName>TillageIncidents</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>DamagedArea__c</columns>
    <columns>Plot__c</columns>
    <columns>IncidentType__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ocorrências na Lavoura</label>
</ListView>